roster-view: clear_view: start by cleaning our internal hash tables

Removing and destroying the widgets contained in the view will call
empathy_roster_view_remove(). This function may use some of the internal hash
tables which now contain destroyed object.

It's safer to clean the internal hash tables first as we are about to destroy
their content anyway.

https://bugzilla.gnome.org/show_bug.cgi?id=683275